# oxide-feed

./: .env.example  .gitignore  ARCHITECTURE.md  BUSINESS_FLOW.md  Cargo.toml  LICENSE  README.md  SETUP.md  perbaikan.md
deploy/: oxide-feed.service  setup.sh
src/: config.rs  ingest.rs  llm.rs  main.rs  storage.rs  telegram.rs
