[package]
name = "oxide-feed"
version = "1.0.0"
edition = "2021"
authors = ["OxideFeed Contributors"]
description = "Lightweight news aggregator & Gemini-powered sanitizer for Telegram"
license = "MIT"
repository = "https://github.com/your-org/oxide-feed"
keywords = ["rss", "news", "gemini", "telegram", "aggregator"]

[dependencies]
# Async Runtime (Restricted to current_thread to minimize allocations)
tokio = { version = "1.35", features = ["rt", "macros", "time"] }

# Network & Ingestion Layer
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
feed-rs = "1.3"
scraper = "0.18"

# Serialization & Persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }

# Utilities
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }

# Hashing for unique IDs
sha2 = "0.10"
hex = "0.4"

# Auto-load .env files (optional, silences error if .env not found)
dotenvy = "0.15"

